# nvim-spotify

./: .gitignore  Cargo.toml  LICENSE  install.sh
plugin/: rpc.lua  spotify-nvim.vim
plugin/lua/: rpc_andrea.lua  spotify-nvim.vim
src/: main.rs  redirect.rs  spotify.rs  util.rs
