[package]
name = "spotify-vim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
neovim-lib = "*"
rspotify = {version = "*", features = ["cli", "env-file"]}
env_logger = "0.10.0"
tokio = {version = "1.29.1", features = ["full"]}
webbrowser = "0.8.10"
